optimasi image dan seo

--- a/app/globals.css
+++ b/app/globals.css
@@ -206,7 +206,7 @@ html {
 }
 
 .faq-bg {
-  background-image: url("/images/faq/swirl.png");
+  background-image: url("/images/faq/swirl.webp");
   background-repeat: no-repeat;
   background-size: cover;
 }
